# aitdsrecon

./: .dockerignore  .env.example  .gitignore  AUDIT_NOTES_TDS_RECONCILIATION_LOGIC.md  BACKLOG.md  CHANGELOG.md  CLAUDE.md  DEV-SETUP.md  Dockerfile  LEARNING-LOG.md  ONBOARDING.md  PRODUCTION-PLAN.md  RUN_LOCAL.md  SOP-DEMO.md  SOP.md  TDS_Recon_Backend_Development_Report.docx  TECH_ARCHITECTURE_REVIEW.md  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt
.claude/commands/: finish.md
app/: config.py  dependencies.py  main.py
app/agents/: base.py  chat_agent.py  learning_agent.py  matcher_agent.py  parser_agent.py  reporter_agent.py  tds_checker_agent.py  utils.py
backend/: .dockerignore  .env.example  Dockerfile  agent_runtime.py  api_server.py  auth.py  excel_report.py  lekha_catalogue.py  llm_client.py  reports.py  requirements.txt  session.py  tracing.py
book-close-ui/: App.jsx.updated  TdsRecon.jsx  index.css.updated  tds-recon.css
docs/: Tally-Export-Guide-for-Clients.md  tds-recon-infographic.html
src/: App.jsx  index.css
tds-recon/: api_server.py  chat_bridge.py  reconcile.py  requirements.txt  reset_client.py
tests/: conftest.py  test_api_endpoints.py  test_auth.py  test_chat_agent.py  test_checker_llm.py  test_checker_logic.py  test_column_mapper.py  test_column_mapper_v2.py  test_db_repository.py  test_edge_cases.py  test_integration.py  test_learning_agent.py  test_llm_client.py  test_matcher_llm.py  test_matcher_logic.py  test_parser_agent.py  test_reporter_llm.py
ui/: index.html  package-lock.json  package.json
(+109 files in other folders)
